compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__multiple_effects.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 12,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: Some(
                    EffectRow {
                        kind: Effects {
                            effects: [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 18,
                                                            end: 20,
                                                            start_line: 1,
                                                            start_col: 19,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 18,
                                                end: 20,
                                                start_line: 1,
                                                start_col: 19,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 18,
                                        end: 20,
                                        start_line: 1,
                                        start_col: 19,
                                    },
                                },
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 22,
                                                            end: 27,
                                                            start_line: 1,
                                                            start_col: 23,
                                                        },
                                                    },
                                                    args: Some(
                                                        TypeArgs {
                                                            args: [
                                                                Type(
                                                                    Type {
                                                                        kind: Path(
                                                                            TypePath {
                                                                                segments: [
                                                                                    TypePathSegment {
                                                                                        name: Spanned {
                                                                                            node: SymbolU32 {
                                                                                                value: 4,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 28,
                                                                                                end: 31,
                                                                                                start_line: 1,
                                                                                                start_col: 29,
                                                                                            },
                                                                                        },
                                                                                        args: None,
                                                                                    },
                                                                                ],
                                                                                span: Span {
                                                                                    start: 28,
                                                                                    end: 31,
                                                                                    start_line: 1,
                                                                                    start_col: 29,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 28,
                                                                            end: 31,
                                                                            start_line: 1,
                                                                            start_col: 29,
                                                                        },
                                                                    },
                                                                ),
                                                            ],
                                                            span: Span {
                                                                start: 27,
                                                                end: 32,
                                                                start_line: 1,
                                                                start_col: 28,
                                                            },
                                                        },
                                                    ),
                                                },
                                            ],
                                            span: Span {
                                                start: 22,
                                                end: 32,
                                                start_line: 1,
                                                start_col: 23,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 22,
                                        end: 32,
                                        start_line: 1,
                                        start_col: 23,
                                    },
                                },
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 34,
                                                            end: 41,
                                                            start_line: 1,
                                                            start_col: 35,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 34,
                                                end: 41,
                                                start_line: 1,
                                                start_col: 35,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 34,
                                        end: 41,
                                        start_line: 1,
                                        start_col: 35,
                                    },
                                },
                            ],
                            rest: None,
                        },
                        span: Span {
                            start: 17,
                            end: 42,
                            start_line: 1,
                            start_col: 18,
                        },
                    },
                ),
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Perform {
                                    effect: None,
                                    operation: Spanned {
                                        node: SymbolU32 {
                                            value: 6,
                                        },
                                        span: Span {
                                            start: 53,
                                            end: 58,
                                            start_line: 1,
                                            start_col: 54,
                                        },
                                    },
                                    args: [
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: String(
                                                        "hi",
                                                    ),
                                                    span: Span {
                                                        start: 59,
                                                        end: 63,
                                                        start_line: 1,
                                                        start_col: 60,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 59,
                                                end: 63,
                                                start_line: 1,
                                                start_col: 60,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 45,
                                    end: 64,
                                    start_line: 1,
                                    start_col: 46,
                                },
                            },
                        ),
                        span: Span {
                            start: 43,
                            end: 66,
                            start_line: 1,
                            start_col: 44,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 66,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 66,
        start_line: 1,
        start_col: 1,
    },
}
