compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__mutable_slice_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 5,
                                        end: 10,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 5,
                                end: 10,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                        ty: Type {
                            kind: Reference {
                                lifetime: None,
                                mutable: true,
                                inner: Type {
                                    kind: Slice {
                                        element: Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 18,
                                                                    end: 21,
                                                                    start_line: 1,
                                                                    start_col: 19,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 18,
                                                        end: 21,
                                                        start_line: 1,
                                                        start_col: 19,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 18,
                                                end: 21,
                                                start_line: 1,
                                                start_col: 19,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: 17,
                                        end: 22,
                                        start_line: 1,
                                        start_col: 18,
                                    },
                                },
                            },
                            span: Span {
                                start: 12,
                                end: 22,
                                start_line: 1,
                                start_col: 13,
                            },
                        },
                        span: Span {
                            start: 5,
                            end: 22,
                            start_line: 1,
                            start_col: 6,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Assign {
                                    target: Expr {
                                        kind: Index {
                                            base: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 26,
                                                                        end: 31,
                                                                        start_line: 1,
                                                                        start_col: 27,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 26,
                                                            end: 31,
                                                            start_line: 1,
                                                            start_col: 27,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 26,
                                                    end: 31,
                                                    start_line: 1,
                                                    start_col: 27,
                                                },
                                            },
                                            index: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 32,
                                                            end: 33,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 32,
                                                    end: 33,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 26,
                                            end: 34,
                                            start_line: 1,
                                            start_col: 27,
                                        },
                                    },
                                    value: Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 1,
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 37,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 38,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 37,
                                            end: 38,
                                            start_line: 1,
                                            start_col: 38,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 26,
                                    end: 38,
                                    start_line: 1,
                                    start_col: 27,
                                },
                            },
                        ),
                        span: Span {
                            start: 24,
                            end: 40,
                            start_line: 1,
                            start_col: 25,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 40,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 40,
        start_line: 1,
        start_col: 1,
    },
}
